--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,15 @@ jobs:
       - run: npm ci
       - run: npm run prettier --if-present
       - run: npm run build --if-present
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "my-movie-db-front"
+          heroku_email: "dramane-dev@gmail.com"
+          procfile: "web: npm start"
